Prevent OutOfMemoryError.