@@ -46,6 +46,7 @@ subprojects {
     }
 
 	tasks.withType(Test) {
+		jvmArgs "-XX:MaxPermSize=256m -Xmx512m"
 		ignoreFailures = true
 // We don't use separate processes but separate threads in the same JVM, because this is faster.
 //		maxParallelForks = Runtime.runtime.availableProcessors() * 2
